@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.renegadesdarts"
 	name="Renegades Darts"
-	version="2.2.0"
+	version="3.0.0"
 	provider-name="Coldkeys/AP">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
