@@ -6,3 +6,5 @@
 14 February 2016 - Updated with 2016 Dutch Masters
 [B]Version 2.2.0[/B]
 04 March 2016 - Updated with 2016 UK Open
+[B]Version 3.0.0[/B]
+05 June 2017 - Converted to text file version for easy update. 2017 and many other playlists added.
